Update Serial Client and Report and Baud Rate

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 
 Python_Network/Server/2018_10_10_log.txt
 Python_Network/Server/log.txt
+~WRL2555.tmp
+~$P - Robotic Arm Serial and Wifi Communication.docx
