--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ Python_Network/Server/2018_10_10_log.txt
 Python_Network/Server/log.txt
 ~WRL2555.tmp
 ~$P - Robotic Arm Serial and Wifi Communication.docx
+For DL Team.zip
