--- a/C_example/Makefile
+++ b/C_example/Makefile
@@ -1,5 +1,5 @@
 MODFILE = ./build/lib.linux-armv7l-2.7/benchmark.so
-#lib.linux-armv7l-3.5/benchmark.cpython-35m-arm-linux-gnueabihf.so
+#MODFILE = ./build/lib.linux-armv7l-3.5/benchmark.cpython-35m-arm-linux-gnueabihf.so
 MODFILE_W = ./benchmark.so
 #SRCFILE = ./build/temp.linux-armv7l-3.5/benchmark.o
 #SRCFILE_W = ./benchmark.o
