--- a/C_example/Makefile
+++ b/C_example/Makefile
@@ -1,17 +1,25 @@
 #MODFILE = ./build/lib.linux-armv7l-2.7/benchmark.so
-MODFILE = ./build/lib.linux-armv7l-3.5/benchmark.cpython-35m-arm-linux-gnueabihf.so
-MODFILE_W = ./benchmark.so
+#MODFILE = ./build/lib.linux-armv7l-3.5/benchmark.cpython-35m-arm-linux-gnueabihf.so
+#MODFILE_W = ./benchmark.so
 #SRCFILE = ./build/temp.linux-armv7l-3.5/benchmark.o
 #SRCFILE_W = ./benchmark.o
+ORG = ./build/*/*.so
+DEST = ./
+PROGNAME = ex
 all: build
 
 build:
-	python setup.py build
+	python3 setup.py build
 #	mv $(MODFILE) $(MODFILE_W)
 #	mv $(SRCFILE) $(SRCFILE_W)
+	mv $(ORG) $(DEST)
 
-.PHONY: clean 
+
+.PHONY: clean run
 clean:
 	rm -rf build
 	rm *.so
-	rm *.o
+	#rm *.o
+
+run:
+	python3 $(PROGNAME).py
